<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#99A9F6ED"
        app:layout_constraintBottom_toBottomOf="@id/gaideline2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="aaaaaaaaaa" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gaideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="4dp"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gaideline2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnAc"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_blu_round_button"
                android:text="@string/ac"
                app:layout_constraintEnd_toStartOf="@id/btnQuota"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnQuota"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_grey_round_button"
                android:text="@string/skob"
                app:layout_constraintEnd_toStartOf="@id/btnPercent"
                app:layout_constraintStart_toEndOf="@id/btnAc" />

            <Button
                android:id="@+id/btnPercent"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_grey_round_button"
                android:text="@string/proc"
                app:layout_constraintEnd_toStartOf="@id/btnDivide"
                app:layout_constraintStart_toEndOf="@id/btnQuota" />

            <Button
                android:id="@+id/btnDivide"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_grey_round_button"
                android:text="@string/del"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnPercent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnSeven"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_7"
                app:layout_constraintEnd_toStartOf="@id/btnEight"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnEight"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_8"
                app:layout_constraintEnd_toStartOf="@id/btnNine"
                app:layout_constraintStart_toEndOf="@id/btnSeven" />

            <Button
                android:id="@+id/btnNine"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_9"
                app:layout_constraintEnd_toStartOf="@id/btnMulti"
                app:layout_constraintStart_toEndOf="@id/btnEight" />

            <Button
                android:id="@+id/btnMulti"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_grey_round_button"
                android:text="@string/mm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnNine" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnFour"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_4"
                app:layout_constraintEnd_toStartOf="@id/btnFive"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnFive"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_5"
                app:layout_constraintEnd_toStartOf="@id/btnSix"
                app:layout_constraintStart_toEndOf="@id/btnFour" />

            <Button
                android:id="@+id/btnSix"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_6"
                app:layout_constraintEnd_toStartOf="@id/btnMines"
                app:layout_constraintStart_toEndOf="@id/btnFive" />

            <Button
                android:id="@+id/btnMines"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_grey_round_button"
                android:text="@string/mines"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnSix" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnOne"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_1"
                app:layout_constraintEnd_toStartOf="@id/btnTwo"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnTwo"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_2"
                app:layout_constraintEnd_toStartOf="@id/btnThree"
                app:layout_constraintStart_toEndOf="@id/btnOne" />

            <Button
                android:id="@+id/btnThree"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_3"
                app:layout_constraintEnd_toStartOf="@id/btnPlus"
                app:layout_constraintStart_toEndOf="@id/btnTwo" />

            <Button
                android:id="@+id/btnPlus"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_grey_round_button"
                android:text="@string/plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnThree" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnZero"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_0"
                app:layout_constraintEnd_toStartOf="@id/btnPoint"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnPoint"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/bbb"
                app:layout_constraintEnd_toStartOf="@id/btnNext"
                app:layout_constraintStart_toEndOf="@id/btnZero" />

            <Button
                android:id="@+id/btnNext"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toStartOf="@id/btnEqually"
                app:layout_constraintStart_toEndOf="@id/btnPoint" />

            <Button
                android:id="@+id/btnEqually"
                style="@style/CalcWhiteBittons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_green_round_button"
                android:text="@string/nnn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnNext" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>